--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -8,9 +8,10 @@
   <body>
     <h1>私の趣味</h1>
     <p>私は中学時代にサッカーを始めました。<br>
-      私はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
+      現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
     </p>
-    <img src="../images/sample.jpg" alt="サッカーボールの画像"/><br>
+    <img src="../images/sample.jpg" alt="サッカーボールの"/><br>
     <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
   </body>
   </html>
+
