--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -59,9 +59,11 @@
         <article>
           <h2>テクノロジー</h2>
           <br>
+          <section>
           <h3>SAMURAIが新しい動画をリリース</h3>
           <p>SAMURAI公式YouTubeで新しい動画がリリースされました。<br>動画の内容はHTML/CSSの解説です。</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=JQUiIt9JoI_BTmp_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </section>
         </article>
       </main>
       <footer>
@@ -69,3 +71,4 @@
       </footer>
     </body>
 </html>
+
