--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -30,7 +30,7 @@
               <label>氏名</label>
               <input type="text" placeholder="名前を入力してください">
               <br>
-              <label>年齢</label>
+              <label>年代</label>
                 <select>
                   <option>10代以下</option>
                   <option>20代</option>
@@ -42,7 +42,7 @@
                 <label>女性</label><input type="radio" name="gender">
                 <label>その他</label><input type="radio" name="gender">
                 <br>
-                <label>おすすめの和菓子の名称</label>
+                <label>おすすめ和菓子の名称</label>
                 <input type="text" placeholder="例:みたらし団子">
                 <br>
                 <label>おすすめする理由</label>
@@ -71,4 +71,5 @@
       </footer>
     </body>
 </html>
+
 
